--- a/to-do-list.css
+++ b/to-do-list.css
@@ -1,5 +1,5 @@
 .my-list {
-    background-color: #f7f381;
+    background-color: #ec1212;
     padding: 8px 24px;
     width: 500px;
     margin: 0 auto;
